--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "hueplusplus"]
 	path = hueplusplus
-	url = git@github.com:EmilyBjoerk/hueplusplus
+	url = https://github.com/EmilyBjoerk/hueplusplus.git
