Simplify the cmake config.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,16 +12,10 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 set(CMAKE_CXX_FLAGS "-Werror -Wall -Wextra -pedantic -Wno-attributes")
 
-get_filename_component(BASE_PATH "${${PROJECT_NAME}_SOURCE_DIR}/" ABSOLUTE)
-set(INC_PATH     "${BASE_PATH}/include")
-set(SRC_PATH     "${BASE_PATH}/src")
-file(GLOB SRC_FILES "${SRC_PATH}/*.cc")
+file(GLOB SRC_FILES "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cc")
 
 add_subdirectory(hueplusplus)
-
-include_directories(${INC_PATH})
 add_executable(${PROJECT_NAME} ${SRC_FILES})
 target_link_libraries(photon-hue hueplusplusstatic)
-add_test(photon-hue photon-hue)
 
 
