Crossing some ts dotting some is while testing the instructions.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ if(NOT CMAKE_BUILD_TYPE)
   set(CMAKE_BUILD_TYPE Release)
 endif()
 
-project(photon-hue C CXX)
+project(photon-hue CXX)
 set(CMAKE_CXX_FLAGS_DEBUG "-g -O0")
 set(CMAKE_CXX_FLAGS_RELEASE "-O2")
 set(CMAKE_CXX_STANDARD 17)
@@ -16,7 +16,7 @@ file(GLOB SRC_FILES "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cc")
 add_subdirectory(hueplusplus EXCLUDE_FROM_ALL)
 add_executable(${PROJECT_NAME} ${SRC_FILES})
 target_link_libraries(${PROJECT_NAME} hueplusplusstatic)
-install(TARGETS ${PROJECT_NAME})
+install(TARGETS ${PROJECT_NAME} DESTINATION bin)
 
 set(SERVICE_LAUNCHER ${PROJECT_NAME}-service)
 configure_file("install/launcher.in" ${SERVICE_LAUNCHER})
