--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,12 +5,12 @@ if(NOT CMAKE_BUILD_TYPE)
 endif()
 
 project(photon-hue CXX)
-set(CMAKE_CXX_FLAGS_DEBUG "-g -O0")
+set(CMAKE_CXX_FLAGS_DEBUG "-g -O0 -Werror")
 set(CMAKE_CXX_FLAGS_RELEASE "-O2")
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
-set(CMAKE_CXX_FLAGS "-Werror -Wall -Wextra -pedantic -Wno-attributes")
+set(CMAKE_CXX_FLAGS "-Wall -Wextra -pedantic -Wno-attributes")
 file(GLOB SRC_FILES "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cc")
 
 add_subdirectory(hueplusplus EXCLUDE_FROM_ALL)
